[package]
name = "fourier"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = "0.4.1"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
rand = "0.8.5"
plotters = "0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]